Fix responsive styling for the WrapJingles page.

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -100,6 +100,12 @@ a {
       @include flex-center();
     }
   }
+
+  @include for-sm-screen {
+    .page-header-wrapper {
+      text-align: center;
+    }
+  }
 }
 
 .separator {
